--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ langchain-openai==1.1.0
 langgraph==1.0.4
 
 langgraph-cli[inmem]==0.4.7
-langsmith==-0.4.49
+langsmith==0.4.49
 #tavily-python==0.7.13
 
-
+fastapi==0.123.0
