--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,12 @@ langchain-community==0.4.1
 langchain-openai==1.1.0
 langgraph==1.0.4
 
-# langsmith test용
-langgraph-cli[inmem]==0.4.7
-langsmith==0.4.49
-
 # 벡엔드, front
 Django==4.2.11
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 gunicorn==21.2.0
-psycopg==3.1.18
+psycopg==3.2.13                     
+psycopg-binary==3.2.13
 elasticsearch==8.12.0
 
