--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,12 +3,16 @@ services:
   postgres:
     image: postgres:latest
     restart: always
-    volumes:
-      - ./postgres-data:/var/lib/postgresql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5433:5432"
+    env_file:
+      - ../.env # docker/에서 한 단계 위 루트의 .env
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_HOST: ${DB_HOST}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+      PGDATA: /var/lib/postgresql/data
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    ports:
+      - "5432:5432"
