fix: 라이브러리 버전 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ psycopg2-binary==2.9.11
 requests==2.32.5
 python-dotenv==1.0.1
 PyJWT==2.9.0
-whisperlivekit
+whisperlivekit==0.2.16
+faster-whisper==1.2.1
