refactor: .env보안으로 추가해야되는 값들만 추가

--- a/.env.sample
+++ b/.env.sample
@@ -1,20 +1,37 @@
+DJANGO_SECRET_KEY=change-me
+DJANGO_DEBUG=false
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+DJANGO_CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:5174
+DJANGO_CSRF_TRUSTED_ORIGINS=
+DJANGO_SECURE_SSL_REDIRECT=false
+DJANGO_SECURE_HSTS_SECONDS=0
+DJANGO_SECURE_PROXY_SSL_HEADER=false
+DJANGO_SESSION_COOKIE_SECURE=false
+DJANGO_CSRF_COOKIE_SECURE=false
+
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=jobtory
-DB_USER=gyulcross
-DB_PASSWORD=gyulcross0113
+DB_USER=appuser
+DB_PASSWORD=changeme
 
 VITE_API_BASE=http://localhost:8000
-VITE_GOOGLE_CLIENT_ID=528099014788-
+VITE_GOOGLE_CLIENT_ID=
 
-GOOGLE_CLIENT_ID=528099014788-
-GOOGLE_CLIENT_SECRET=GOCSPX-  # 콘솔에서 받은 값
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=  # 콘솔에서 받은 값
 GOOGLE_REDIRECT_URI=http://localhost:8000/api/auth/google/callback
 
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_HOST_USER=jobtory0113@gmail.com
+EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 EMAIL_USE_TLS=true
-DEFAULT_FROM_EMAIL=jobtory0113@gmail.com
+DEFAULT_FROM_EMAIL=
+
+STT_API_TOKEN=
+STT_MAX_UPLOAD_BYTES=5242880
+STT_FFMPEG_TIMEOUT_SECONDS=20
+
+ALLOW_DESTRUCTIVE_IMPORT=false
