--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,3 +16,12 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     ports:
       - "5432:5432"
+
+  redis:
+    image: redis/redis-stack-server:latest
+    container_name: redis-stack
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis-data:/data
