--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,11 @@ opencv-python==4.10.0.84
 numpy==1.26.4
 django-redis==6.0.0
 celery==5.6.0
-redis==7.1.0
+redis==6.4.0 
 
 # langgraph
 langchain==1.1.0
 langchain-community==0.4.1
 langchain-openai==1.1.0
 langgraph==1.0.4
-openai==1.67.1
-
+langgraph-checkpoint-redis==0.2.1
