--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 backend/*/__pycache__
 backend/*/migrations
 .env
+*/redis-data
+**/redis-data/
+**/redis-data/**
+redis-data/
+docker/redis-data/
+docker/redis-data/**
+backend\__pycache__
+backend/**/__pycache__/
