--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,20 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=jobtory
-DB_USER=gyulcross
-DB_PASSWORD=gyulcross0113
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
 
-VITE_API_BASE=http://localhost:8000
-VITE_GOOGLE_CLIENT_ID=528099014788-
+VITE_API_BASE=http://localhost:8000/
+VITE_GOOGLE_CLIENT_ID=
+VITE_FRONTEND_BASE=http://localhost:5174/
+VITE_GOOGLE_REDIRECT_URI=http://localhost:5174/login
 
-GOOGLE_CLIENT_ID=528099014788-
-GOOGLE_CLIENT_SECRET=GOCSPX-  # 콘솔에서 받은 값
-GOOGLE_REDIRECT_URI=http://localhost:8000/api/auth/google/callback
+REDIS_URL=redis://localhost:6380/0 # 본인 redis 포트에 맞춰서 수정 필요
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+FRONTEND_BASE_URL=http://localhost:5174/
+GOOGLE_REDIRECT_URI=http://localhost:5174/login
 
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
@@ -18,3 +23,5 @@ EMAIL_HOST_USER=jobtory0113@gmail.com
 EMAIL_HOST_PASSWORD=
 EMAIL_USE_TLS=true
 DEFAULT_FROM_EMAIL=jobtory0113@gmail.com
+
+OPENAI_API_KEY=
