--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,7 @@ VITE_API_BASE=http://localhost:8000/
 VITE_GOOGLE_CLIENT_ID=
 VITE_FRONTEND_BASE=http://localhost:5174/
 VITE_GOOGLE_REDIRECT_URI=http://localhost:5174/login
+VITE_SOCKET_URL=http://localhost:4000
 
 REDIS_URL=redis://localhost:6380/0 # 본인 redis 포트에 맞춰서 수정 필요
 
@@ -25,3 +26,10 @@ EMAIL_USE_TLS=true
 DEFAULT_FROM_EMAIL=jobtory0113@gmail.com
 
 OPENAI_API_KEY=
+
+# Realtime gateway (Node + Socket.IO)
+SOCKET_PORT=4000
+SOCKET_CORS_ORIGINS=http://localhost:5174
+SOCKET_URL=http://localhost:4000
+# Use the same secret as Django SECRET_KEY for JWT verification
+JWT_SECRET=development-secret-key
