--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,8 @@ langchain-community==0.4.1
 langchain-openai==1.1.0
 langgraph==1.0.4
 langgraph-checkpoint-redis==0.2.1
+
+# media 분석용
+pandas==2.3.3
+scikit-learn==1.6.1
+joblib==1.5.2
