--- a/frontend/vue-app/package.json
+++ b/frontend/vue-app/package.json
@@ -10,9 +10,11 @@
     "lint": "echo \"Add lint command\""
   },
   "dependencies": {
+    "codemirror": "^5.65.16",
+    "html2pdf.js": "^0.12.1",
+    "markdown-it": "^14.1.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "codemirror": "^5.65.16"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
