--- a/.env.sample
+++ b/.env.sample
@@ -4,10 +4,23 @@ DB_NAME=
 DB_USER=
 DB_PASSWORD=
 
+DJANGO_SECRET_KEY=
+DJANGO_DEBUG=false
+DJANGO_ALLOWED_HOSTS=example.com,www.example.com
+CORS_ALLOW_ALL_ORIGINS=false
+CORS_ALLOWED_ORIGINS=http://example.com,https://example.com
+CORS_ALLOW_CREDENTIALS=false
+CSRF_TRUSTED_ORIGINS=http://example.com,https://example.com
+
 VITE_API_BASE=http://localhost:8000/
 VITE_GOOGLE_CLIENT_ID=
 VITE_FRONTEND_BASE=http://localhost:5174/
 VITE_GOOGLE_REDIRECT_URI=http://localhost:5174/login
+
+# production example
+# VITE_API_BASE=/api/
+# VITE_FRONTEND_BASE=https://example.com/
+# VITE_GOOGLE_REDIRECT_URI=https://example.com/login
 
 REDIS_URL=redis://localhost:6380/0 # 본인 redis 포트에 맞춰서 수정 필요
 
