--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ langgraph-checkpoint-redis==0.2.1
 # deepagent
 deepagents==0.3.0
 langgraph-checkpoint-postgres
-
+psycopg[binary]==3.2.3
 
 # media 분석용
 pandas==2.3.3
